# experimentator

./: .gitignore  README.md  nn_notes.md  pyproject.toml  release.sh  setup.py  tf_notes.md
examples/configs/: mnist.py
examples/tasks/: mnist.py
experimentator/: __init__.py  __main__.py  app.py  base_experiment.py  callbacked_experiment.py  callbacks.py  dataset.py  keys_splitter.py  logger_experiment.py  logging.py  manager.py  neptune_experiment.py  tf1_chunk_processors.py  tf1_experiment.py  tf2_chunk_processors.py  tf2_experiment.py  torch_chunk_processors.py  torch_experiment.py  utils.py  wandb_experiment.py
src/experimentator/: __init__.py  base_experiment.py  callbacked_experiment.py  dataset.py  logger_experiment.py  loggers.py  manager.py  tf2_experiment.py  torch_experiment.py  utils.py  wandb_experiment.py
src/experimentator/dataset/: common.py
